--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.3
-  dio: ^4.0.0
+#  dio: ^4.0.0
+  url_launcher: ^6.0.6
 
 dev_dependencies:
   flutter_test:
